Origins post fixes and add the 1984 post

--- a/_posts/2020-12-22-Origins.md
+++ b/_posts/2020-12-22-Origins.md
@@ -2,10 +2,10 @@
 layout: post
 title: The Origins of flow
 ---
-One of the main things I plan to talk about in this blog is my flow, either about flow itself directly or things I 
-have done or learned while working on it.
+One of the main things I plan to talk about in this blog is my 'flow' programming project, either about flow itself 
+directly or things I have learned while working on it.
 
-Rather than dive in and just describe flow and what it is and what it does, I thought it might be more interesting
+Rather than dive in and describe flow, what it is and what it does, I thought it might be more interesting
 if I describe the origins of the project and how they gradually formed in my head and gave me the desire to do it.
  
 It's been a process of about 30 years or more, although I didn't even realize most of the time that I was
@@ -15,14 +15,15 @@ accumulating these thoughts.
 What was I doing? 
 
 I can't remember, I was 12 years old!
-But I wasn't reading Computer Science research papers or CS books, that is for sure.
+
+But I wasn't reading Computer Science research papers or books, that is for sure.
 
 But something did happen then that would take me a long time to learn about... until after I had developed
 some of the ideas for flow "independently". I'll reveal what this was later, sorry for the teaser!
 
 ## First step
 I think the first step must have been when I took my first baby steps into the world of computers, something which 
-would also lead to an entire career im Computer Science. 
+would also lead to an entire career in Computer Science. 
 
 That would be in 1984, and I'll describe it in my next post.
 
