Fix post headers

--- a/_posts/2020-12-22-Origins.md
+++ b/_posts/2020-12-22-Origins.md
@@ -1,7 +1,8 @@
 ---
 layout: post
-title: The Origins of flow
+title: The Origins of 'flow'
 ---
+
 One of the main things I plan to talk about in this blog is my 'flow' programming project, either about flow itself 
 directly or things I have learned while working on it.
 
