--- a/_posts/2020-12-23-1984.md
+++ b/_posts/2020-12-23-1984.md
@@ -1,12 +1,18 @@
-# It was 1984
+---
+layout: post
+title: It was 1984!
+---
 
 I was finishing my last year at school and just about to go off to University.
 
-I had already been programming at home for a few years on a
+I still can't believe prople were rattling on about George Orwell's book, and how we were somehow
+"in the future" and we had got as far as 1984!
+
+I had already been programming at home for a few years on a Sinclair ZX81
  
 ![Sinclair ZX81](../images/zx81_1.jpg) 
 
-and then a
+and then a ZX Spectrum 128
  
 ![ZX Spectrum 128](../images/spectrum-128-1.jpg)
  
