--- a/_posts/2020-12-23-1984.md
+++ b/_posts/2020-12-23-1984.md
@@ -5,7 +5,7 @@ title: It was 1984!
 
 I was finishing my last year at school and just about to go off to University.
 
-I still can't believe prople were rattling on about George Orwell's book, and how we were somehow
+I still can't believe people were rattling on about George Orwell's book, and how we were somehow
 "in the future" and we had got as far as 1984!
 
 I had already been programming at home for a few years on a Sinclair ZX81
