--- a/_posts/_2020-12-25-SAD-1987.md
+++ b/_posts/_2020-12-25-SAD-1987.md
@@ -1,10 +1,10 @@
 ---
 layout: post
-title: 1987, Structured Analysis and Design
+title: Flow Origins: 1987, Structured Analysis and Design
 --- 
 
 Ah... the good old days, when you were tools to sit down and think about a problem, and try and define it, then 
-think on the solution and design it... _then_ start writing some code...
+think on the solution and design it... _before_ starting to write code...
 
 I was working at Hewlett-Packard, in their Telecommunications Division, making high-speed instruments for other
 engineers to use to make high-speed things for you! :-)
@@ -16,4 +16,17 @@ To help maintain software quality and reliability, HP back then used a formal me
 "Structured Analysis and Design".
 
 ## Summary of things that stuck with me
-visual, parallel-like, not implementation
+* The use of a visual, hierarchical  decomposition of functionality required to solve a problem. 
+  The analysis did this on the problem and the design on the solution, in different ways. Even though
+  it's ess implementation focussed, the structured analysis part is what most stuck with me,
+  with nested "bubbles" with data flow between them at the same level, to the upper level in hierarchy, 
+  and into bubbles that expanded into the next level down. Data in to a level from above had to match
+  at the next level up and down.
+* The analysis was just the problem description and so shouldn't be thought of in implementation
+  terms, yet I did. I liked how it all "just worked" based on the availability of data via a flow
+  and how it was inherently parallel. The only thing that "sequenced" a process's execution was the 
+  availability of data on it's inputs.
+* Not implementation focused, as was all about analysing and understanding the _problem_.
+  This is not directly applicable to `flow` but it I've often gone back to that point over the years
+  and made a conscious effort to understand a problem well, and be able to describe it (even if in words),
+  before trying to solve it.
