Avoid yaml errors in posts

--- a/_posts/2021-02-01-SAD-1987.md
+++ b/_posts/2021-02-01-SAD-1987.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Flow Origins: 1987, Structured Analysis and Design
+title: Flow Origins - 1987, Structured Analysis and Design
 --- 
 
 Ah... the good old days (of Software Development), when you took time to sit down and think about a problem, 
