--- a/_posts/2020-12-22-Origins.md
+++ b/_posts/2020-12-22-Origins.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Flow Origins: 
+title: Flow Origins
 ---
 
 One of the main things I plan to talk about in this blog is my 'flow' programming project, either about flow itself 
