Tag posts and restructure index page

--- a/_posts/2010-01-16-Dollar.md
+++ b/_posts/2010-01-16-Dollar.md
@@ -1,6 +1,7 @@
 ---
 layout: post
 title: Confederate States Dollar Bill
+tags: personal memory
 ---
 Cleaning out the other day I found this, and felt like sharing it with others.
 
