--- a/_posts/2020-12-23-1984.md
+++ b/_posts/2020-12-23-1984.md
@@ -1,6 +1,7 @@
 ---
 layout: post
 title: Flow Origins - It was 1984
+tags: flow programming
 ---
 
 I was finishing my last year at school and just about to go off to University.
